<resources>
    <string name="app_name">PRO-BIT</string>
    <string name="logo_name">PRO-BIT</string>
    <string name="slogan_name">Apne India Ki Apni Dukaan</string>
    <string name="powered_by">Powered By PRO-BIT</string>

    <string name="first_slide">Search Your Location</string>
    <string name="second_slide">Make a Call</string>
    <string name="third_slide">Add Missing Place</string>
    <string name="fourth_slide">Sit Back and Enjoy</string>

    <string name="first_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus iaculis augue at elit posuere, vel semper ipsum maximus.</string>
    <string name="sec_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus iaculis augue at elit posuere, vel semper ipsum maximus.</string>
    <string name="third_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus iaculis augue at elit posuere, vel semper ipsum maximus.</string>
    <string name="fourth_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus iaculis augue at elit posuere, vel semper ipsum maximus.</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets get Started</string>


    <string name="shop4">Shop4</string>
    <string name="shop1">Shop1</string>
    <string name="shops">Shops</string>
    <string name="shop2">Shop2</string>
    <string name="shop3">Shop3</string>
    <string name="shop5">Shop5</string>
    <string name="shop6">Shop6</string>
    <string name="shop7">Shop7</string>
    <string name="shop8">Shop8</string>

    <string name="featured_categories">All Featured Categories</string>
    <string name="featured_categories_description">All the best categories just in one place!!!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <string name="home">Home</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="search_k">SEARCH</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="menu_profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="share">Share with your friends</string>
    <string name="rate_us">Kindly Rate Us</string>

    <string name="text">Light Mode</string>
    <string name="night">Night</string>

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business.</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="shop_discription">shop description will show here</string>

    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter One Time Password Sent On +913332225554</string>

    <string name="enter_full_name">Full Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password">Password</string>

</resources>