<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/circle"
        />
    <item
        android:id="@+id/nav_search"
        android:title="@string/search_k"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/nav_all_categories"
        android:title="@string/all_categories"
        android:icon="@drawable/category"/>

</group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/menu_profile"
                    android:icon="@drawable/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>

            </group>
        </menu>
    </item>

    <item android:title="Categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restraurants"
                    android:title="@string/shop1"
                    android:icon="@drawable/restaurant"/>
                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/shop2"
                    android:icon="@drawable/bank"/>
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shops"
                    android:icon="@drawable/shop"/>

            </group>
        </menu>
    </item>

    <item android:title="Share" >
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_us"/>


            </group>
        </menu>
    </item>

</menu>