<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerStartupScreen"
    android:padding="30dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/round"></ImageView>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retailer_heading"
        android:layout_marginTop="120dp"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retailer_tag_line"
       
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorSplash"
            android:text="@string/login"
            android:onClick="callLoginScreen"
            android:textColor="@color/black"
            android:transitionName="transition_login"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorSplash"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:transitionName="transition_signup"
            android:onClick="callSignupScreen"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/how_we_work"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:textColor="@color/black"/>
</LinearLayout>
</ScrollView>